[package]
name = "esp_float_print_bug"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s2-hal = "0.2.0"

esp-backtrace = { version = "0.2.0", features = ["esp32s2", "panic-handler", "print-uart"] }
esp-println = { version = "0.2.0", features = ["esp32s2"] }
xtensa-atomic-emulation-trap = "0.2.0"
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s2"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]

[profile.release]
debug = true
opt-level = 3 # 1, 2, 'z' or 's'
